🐛 Fix Internet Explorer subnavbar/body overflow

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -34,6 +34,7 @@
 
 @mixin position-absolute-top($distance) {
   position: absolute;
+  right: 0;
   top: $distance;
 }
 
